<resources>
    <string name="app_name">GeocARching</string>
    <string name="menu_home">HOME</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_records">RECORDS</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_leaderboard">LEADERBOARD</string>
    <string name="menu_sign_out">SIGN OUT</string>

    <string name="menu_maps">MAPS</string>
    <string name="firebase_collection_caches">Caches</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect_account">Disconnect Account</string>
    <string name="firebase_collection_users">Users</string>
    <string name="add_marker_name_hint">Name of cache</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="add_marker_dialog_message">Add New Marker</string>
    <string name="loading_message">Loading…</string>
    <string name="no_visits">No visits found.</string>
    <string name="no_placed_caches">No placed caches found.</string>
    <string name="add_marker_desc_hint">Description of cache</string>
    <string name="default_username">username</string>
    <string name="firebase_collection_found_caches">FoundCaches</string>
    <string name="firebase_collection_cache_visits">Visits</string>
    <string name="map_title">Home</string>
    <string name="profile_title">Profile</string>
    <string name="records_title">Records</string>
    <string name="settings_title">Settings</string>
    <string name="leaderboards_title">Leaderboard</string>
    <string name="signout_title">Sign Out</string>

    <string name="firebase_collection_users_placed_caches">PlacedCaches</string>
    <string name="records_tab_visited_title">Visits</string>
    <string name="records_tab_placed_title">Placed</string>

    <string name="maps_fab_snackbar_unset_location_message">Finding user location…</string>
    <string name="maps_fab_snackbar_place_cache_message">There\'s no cache nearby…</string>
    <string name="maps_fab_snackbar_place_cache_option">PLACE CACHE</string>
    <string name="ar_cloud_host_attempt">Attempting to place cache, please wait…</string>
    <string name="ar_cloud_host_error">Unable to place cache, please try again later</string>
    <string name="ar_cloud_resolve_error">We can\'t quite remember where this was placed - it must be an older cache!</string>
    <string name="ar_cache_dialog_unvisited">Congratulations, you\'ve found a cache!</string>
    <string name="ar_cache_dialog_visited">You\'ve already found this cache!</string>
    <string name="ar_cacheviewer_title">Cache Viewer</string>
    <string name="ar_cacheplacer_title">Cache Placer</string>
    <string name="ar_cacheplacer_tapprompt">Tap a surface to place a cache!</string>
    <string name="ar_cacheplacer_placesuccess_message">Congratulations, you\'ve placed a cache!</string>
    <string name="ar_cacheplacer_placesuccess_option">RETURN TO MAP</string>
    <string name="cache_details_title">Cache Visits</string>
    <string name="firebase_users_level">level</string>
    <string name="no_users">Leaderboard is empty…</string>
    <string name="firebase_collection_users_experience">experience</string>
    <string name="firebase_collection_users_level">level</string>
    <string name="level_up_snacker_bar_message">You are now level %d! Nice work!</string>
    <string name="profile_text_view_level">Level</string>
    <string name="profile_defualt_level">0</string>
    <string name="profile_defualt_experience">0</string>
    <string name="profile_text_view_experience">Total XP</string>
    <string name="profile_default_start_level">0</string>
    <string name="profile_default_next_level">1</string>
    <string name="cache_report">Report Cache</string>
    <string name="report_cache_hint">Comments</string>
    <string name="report_cache_positive">Report</string>
    <string name="report_cache_title">Report Current Cache?</string>
    <string name="report_cache_negative">Cancel</string>
    <string name="developer_email">withoutporpoisecis4250@gmail.com</string>
    <string name="report_cache_email_subject">REPORT CACHE: %s</string>
    <string name="report_cache_body">Reporting cache [%s]. \n \n Comments:\n%s</string>
    <string name="notif_channel_name">BACKGROUND_LOCATION_CHANNEL</string>
    <string name="notif_name">GeocARching</string>
    <string name="notif_desc">GeocARching notifications</string>
    <string name="background_location_notif_title">Nearby Caches!</string>
    <string name="background_location_notif_content">There are %s caches nearby! Come check them out</string>
    <string name="app_shared_pref">com.porpoise.geocarching</string>
    <string name="shared_pref_notif_on">com.porpoise.geocarching.notifications</string>

    <string-array name="cache_model_array">
        <item>Model 1</item>
        <item>Model 2</item>
        <item>Model 3</item>
        <item>Model 4</item>
    </string-array>

</resources>
