<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="Main">
            <menu>
                <item
                    android:id="@+id/nav_maps"
                    android:title="@string/menu_maps" />
            </menu>
        </item>


        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_records"
            android:title="@string/menu_records" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_leaderboard"
            android:title="@string/menu_leaderboard" />
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/menu_sign_out" />
    </group>

</menu>
