<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NavUI.Profile">

        <RelativeLayout
            android:id="@+id/relative_usr_img"
            android:layout_width="match_parent"
            android:background="@drawable/grad"
            android:padding="12dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_border">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_image_view"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:padding="13dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/prof_pic"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userfullname_text_view"
                android:layout_below="@+id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="User's Name"
                android:textSize="32sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/usernameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_usr_img"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <View android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/strut"
                android:layout_alignParentLeft="true"
                android:text="Username"
                android:textSize="26sp"/>
            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/strut"
                android:layout_alignParentRight="true"
                android:text="Username"
                android:textSize="26sp"/>

        </RelativeLayout>

        <View
            android:id="@+id/viewsep1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/usernameView"
            android:layout_marginTop="20dp"
            android:background="#ff9703" />

        <RelativeLayout
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewsep1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <View android:id="@+id/strut2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/strut2"
                android:layout_alignParentLeft="true"
                android:text="Email"
                android:textSize="26sp"/>
            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/strut2"
                android:layout_alignParentRight="true"
                android:text="Email"
                android:textSize="26sp"/>

        </RelativeLayout>

        <View
            android:id="@+id/viewsep2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/emailView"
            android:layout_marginTop="20dp"
            android:background="#ff9703" />

        <RelativeLayout
            android:id="@+id/LevelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewsep2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <View android:id="@+id/strut3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/strut3"
                android:layout_alignParentLeft="true"
                android:text="@string/profile_text_view_level"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/profile_level_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/strut3"
                android:layout_alignParentRight="true"
                android:text="@string/profile_defualt_level"
                android:textSize="26sp" />

        </RelativeLayout>

        <View
            android:id="@+id/viewsep3"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/LevelView"
            android:layout_marginTop="20dp"
            android:background="#ff9703" />

        <RelativeLayout
            android:id="@+id/experienceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewsep3"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <View android:id="@+id/strut4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/strut4"
                android:layout_alignParentLeft="true"
                android:text="@string/profile_text_view_experience"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/profile_experience_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/strut4"
                android:layout_alignParentRight="true"
                android:text="@string/profile_defualt_experience"
                android:textSize="26sp" />

        </RelativeLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/experienceView"
            android:layout_marginTop="20dp"
            android:background="#ff9703" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view4"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/profile_current_level_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_default_start_level"
                android:paddingStart="@dimen/profile_level_text_views_start_end"
                android:paddingEnd="@dimen/profile_level_text_views_start_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ProgressBar
                android:id="@+id/profile_level_progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progressTint="#25C71B"
                app:layout_constraintEnd_toStartOf="@+id/profile_next_level_text_view"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/profile_current_level_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_next_level_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_default_next_level"
                android:paddingStart="@dimen/profile_level_text_views_start_end"
                android:paddingEnd="@dimen/profile_level_text_views_start_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</ScrollView>